# CppGPT

./: .bazelignore  .bazelrc  .gitignore  BUILD  BUILD.bazel  CLAUDE.md  MODULE.bazel  PLAN.md  README.md  ROADMAP.md  Readme.md  WORKSPACE  test_example.cpp
.claude/: settings.json
cppgpt/autograd/: BUILD  autograd.h
cppgpt/datatypes/: BUILD  tensor.cpp  tensor.h
docs/: constitution.md
include/cppgpt/: checkpoint.hpp  core.hpp  dataloader.hpp  device.hpp  generate.hpp  log.hpp  model.hpp  ops.hpp  optimizer.hpp  random.hpp  sample.hpp  storage.hpp  tokenizer.hpp  verify.hpp  version.hpp
scripts/: BUILD.bazel  env_info.py  env_test.py  gen_fixtures.py  prepare_shakespeare.py
src/: checkpoint.cpp  dataloader.cpp  log.cpp  model.cpp  ops.cpp  optimizer.cpp  sample.cpp  tokenizer.cpp  version.cpp
tests/: BUILD.bazel  check.hpp  numeric.hpp
tests/fixtures/: BUILD.bazel
tests/integration/: BUILD.bazel  attn_block_test.cpp  generate_test.cpp  mlp_block_test.cpp  parity_test.cpp  prepare_dataloader_test.cpp  transformer_block_test.cpp
tests/unit/: BUILD.bazel  adamw_test.cpp  attention_test.cpp  checkpoint_test.cpp  core_test.cpp  cross_entropy_test.cpp  dataloader_test.cpp  embedding_test.cpp  encoder_test.cpp  gelu_test.cpp  layernorm_test.cpp  log_test.cpp  matmul_test.cpp  model_test.cpp  optim_schedule_test.cpp  random_test.cpp  residual_test.cpp  sample_test.cpp  smoke_test.cpp  softmax_test.cpp  storage_test.cpp  tokenizer_test.cpp
tools/: BUILD.bazel  generate.cpp  prepare.cpp  train.cpp
