load("@rules_cc//cc:defs.bzl", "cc_library")

# Header-only std-only test harness, included as "tests/check.hpp".
cc_library(
    name = "check",
    hdrs = ["check.hpp"],
    visibility = ["//visibility:public"],
)

# Numeric helpers (dot, rel_close, finite-difference grad_check) for op tests.
cc_library(
    name = "numeric",
    hdrs = ["numeric.hpp"],
    visibility = ["//visibility:public"],
)
