# CLI tools (train, generate, bench, verify). The first end-to-end trainer lands
# in M1; generate/bench/verify follow in M1–M2.
load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:private"])

cc_binary(
    name = "train",
    srcs = ["train.cpp"],
    deps = ["//:cppgpt"],
)

cc_binary(
    name = "generate",
    srcs = ["generate.cpp"],
    deps = ["//:cppgpt"],
)
