load("@rules_cc//cc:defs.bzl", "cc_test")

# Integration tests compose multiple ops and verify they wire together (forward
# and backward) — distinct from the per-op unit tests under tests/unit.
cc_test(
    name = "transformer_block_test",
    size = "small",
    srcs = ["transformer_block_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
        "//tests:numeric",
    ],
)
