load("@rules_cc//cc:defs.bzl", "cc_test")

# Integration tests compose multiple ops and verify they wire together (forward
# and backward) — distinct from the per-op unit tests under tests/unit.
cc_test(
    name = "transformer_block_test",
    size = "small",
    srcs = ["transformer_block_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
        "//tests:numeric",
    ],
)

cc_test(
    name = "generate_test",
    size = "small",
    srcs = ["generate_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)

# M1 gate: cppgpt vs canonical GPT-2 in PyTorch, via a committed reference fixture.
cc_test(
    name = "parity_test",
    size = "small",
    srcs = ["parity_test.cpp"],
    data = ["//tests/fixtures:gpt2_parity.bin"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)
