load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "smoke_test",
    size = "small",
    srcs = ["smoke_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)

cc_test(
    name = "core_test",
    size = "small",
    srcs = ["core_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)

cc_test(
    name = "log_test",
    size = "small",
    srcs = ["log_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)

cc_test(
    name = "random_test",
    size = "small",
    srcs = ["random_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)
