load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "smoke_test",
    size = "small",
    srcs = ["smoke_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)

cc_test(
    name = "core_test",
    size = "small",
    srcs = ["core_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)

cc_test(
    name = "log_test",
    size = "small",
    srcs = ["log_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)

cc_test(
    name = "random_test",
    size = "small",
    srcs = ["random_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)

cc_test(
    name = "sample_test",
    size = "small",
    srcs = ["sample_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)

cc_test(
    name = "storage_test",
    size = "small",
    srcs = ["storage_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)

cc_test(
    name = "matmul_test",
    size = "small",
    srcs = ["matmul_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
        "//tests:numeric",
    ],
)

cc_test(
    name = "gelu_test",
    size = "small",
    srcs = ["gelu_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
        "//tests:numeric",
    ],
)

cc_test(
    name = "residual_test",
    size = "small",
    srcs = ["residual_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)

cc_test(
    name = "layernorm_test",
    size = "small",
    srcs = ["layernorm_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
        "//tests:numeric",
    ],
)

cc_test(
    name = "softmax_test",
    size = "small",
    srcs = ["softmax_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
        "//tests:numeric",
    ],
)

cc_test(
    name = "attention_test",
    size = "small",
    srcs = ["attention_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
        "//tests:numeric",
    ],
)

cc_test(
    name = "embedding_test",
    size = "small",
    srcs = ["embedding_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)

cc_test(
    name = "cross_entropy_test",
    size = "small",
    srcs = ["cross_entropy_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
        "//tests:numeric",
    ],
)

cc_test(
    name = "model_test",
    size = "small",
    srcs = ["model_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
        "//tests:numeric",
    ],
)

cc_test(
    name = "adamw_test",
    size = "small",
    srcs = ["adamw_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
        "//tests:numeric",
    ],
)

cc_test(
    name = "tokenizer_test",
    size = "small",
    srcs = ["tokenizer_test.cpp"],
    deps = [
        "//:cppgpt",
        "//tests:check",
    ],
)
